test/fail/match_no_default_bytyp.cll
match:none (true) bytype {
    bool {
        null;
    }
};
0;
